--- a/Lion.SDK.Ethereum/Lion.SDK.Ethereum.csproj
+++ b/Lion.SDK.Ethereum/Lion.SDK.Ethereum.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Lion.Net\Lion.Net.csproj" />
     <ProjectReference Include="..\Lion\Lion.csproj" />
   </ItemGroup>
 
