--- a/Lion.Net/Lion.Net.csproj
+++ b/Lion.Net/Lion.Net.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Socket\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Lion\Lion.csproj" />
+  </ItemGroup>
+
 </Project>
