--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Lion/Properties/PublishProfiles
+/Lion.Data.MySqlClient/Properties/PublishProfiles
+/Lion.Data.SqlClient/Properties/PublishProfiles
+/Lion.Net/Properties/PublishProfiles
+/Lion.SDK.Bitcoin/Properties/PublishProfiles
