--- a/xx/Lion.Net/Lion.Net.csproj
+++ b/xx/Lion.Net/Lion.Net.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\Release</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,5 +15,4 @@
   <ItemGroup>
     <ProjectReference Include="..\Lion\Lion.csproj" />
   </ItemGroup>
-
 </Project>
