--- a/Lion.SDK.Bitcoin/Lion.SDK.Bitcoin.csproj
+++ b/Lion.SDK.Bitcoin/Lion.SDK.Bitcoin.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lion.Net\Lion.Net.csproj" />
+    <ProjectReference Include="..\Lion\Lion.csproj" />
   </ItemGroup>
 
 </Project>
