--- a/Lion.Data.MySqlClient/Lion.Data.MySqlClient.csproj
+++ b/Lion.Data.MySqlClient/Lion.Data.MySqlClient.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="MySql.Data" Version="8.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lion\Lion.csproj" />
+  </ItemGroup>
+
 </Project>
