--- a/Lion.Data.MySqlClient/Lion.Data.MySqlClient.csproj
+++ b/Lion.Data.MySqlClient/Lion.Data.MySqlClient.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\Release\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.11" />
   </ItemGroup>
