--- a/Lion.Data.SqlClient/Lion.Data.SqlClient.csproj
+++ b/Lion.Data.SqlClient/Lion.Data.SqlClient.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\Release\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.5.0" />
   </ItemGroup>
