--- a/Lion.SDK.Bitcoin/Lion.SDK.Bitcoin.csproj
+++ b/Lion.SDK.Bitcoin/Lion.SDK.Bitcoin.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\Release\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Lion.Net\Lion.Net.csproj" />
     <ProjectReference Include="..\Lion\Lion.csproj" />
