--- a/Lion/Lion.csproj
+++ b/Lion/Lion.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\Release</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Encrypt\Keccak256.cs" />
   </ItemGroup>
