--- a/Lion.SDK.Bitcoin/Lion.SDK.Bitcoin.csproj
+++ b/Lion.SDK.Bitcoin/Lion.SDK.Bitcoin.csproj
@@ -12,4 +12,7 @@
     <ProjectReference Include="..\Lion\Lion.csproj" />
     <ProjectReference Include="..\Lion.Net\Lion.Net.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Coins\Eos.cs" />
+  </ItemGroup>
 </Project>
