整理 Lion.SDK.Bitcoin 的结构

--- a/Lion.SDK.Bitcoin/Lion.SDK.Bitcoin.csproj
+++ b/Lion.SDK.Bitcoin/Lion.SDK.Bitcoin.csproj
@@ -16,4 +16,7 @@
   <ItemGroup>
     <Compile Remove="Coins\Eos.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Explorers\" />
+  </ItemGroup>
 </Project>
