--- a/Lion/Lion.csproj
+++ b/Lion/Lion.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SDK\Google\" />
+  </ItemGroup>
 </Project>
