--- a/Lion.SDK/Lion.SDK.csproj
+++ b/Lion.SDK/Lion.SDK.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,5 +6,13 @@
 
   <ItemGroup>
     <Folder Include="Google\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Lion.Net\Lion.Net.csproj" />
   </ItemGroup>
 </Project>
