--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,8 @@ __pycache__/
 .vscode/launch.json
 test/Program.cs
 test/test.csproj
+ConsoleApp1/Program.cs
+ConsoleApp1/ConsoleApp1.csproj
+Lion.sln
+Lion.sln
+Lion.sln
