--- a/Lion/Lion.csproj
+++ b/Lion/Lion.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Encrypt\Spec256\" />
+  </ItemGroup>
 </Project>
