--- a/Lion.CryptoCurrency/Lion.CryptoCurrency.csproj
+++ b/Lion.CryptoCurrency/Lion.CryptoCurrency.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Lion.Net\Lion.Net.csproj" />
     <ProjectReference Include="..\Lion\Lion.csproj" />
   </ItemGroup>
 
